assets/httpd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd
  name: httpd
  #namespace: acm-simple-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpd
  sessionAffinity: None
  type: ClusterIP
