assets/httpd/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: httpd
  name: httpd-route
spec:
  host: poc-cluster.apps.poc.ocp4.test
  port:
    targetPort: 8080
  to:
    kind: Service
    name: httpd
    weight: 100
